[metadata]
name = confsecrets
version = 0.0.5
description = Simple utility to symmetrically encrypt/decrypt application screts
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=CommonMark
author = Dan Davis
author_email = dan@danizen.net
maintainer = Dan Davis
maintainer_email = dan@danizen.net
url = https://github.com/danizen/confsecrets.git
project_urls =
	Documentation = https://danizen.github.io/confsecrets/
classifiers = 
	Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security :: Cryptography
    Topic :: Software Development
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires = 
	cryptography
	pyyaml
tests_require = 
	tox

[options.entry_points]
console_scripts = 
	confsecrets = confsecrets.cli:main

[aliases]
test=pytest

